--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,20 +3,30 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Lato", sans-serif;
-$font-size-base: 0.9rem;
+$font-family-sans-serif: futura-pt, sans-serif;
+$font-size-base: 1rem;
 $line-height-base: 1.6;
+$font-weight-light: 300;
+$font-weight-book: 400;
+$font-weight-medium: 500;
+$font-weight-demi: 600;
+$font-weight-heavy: 700;
+// For Futura Bold weight, you must use font-family: futura-pt-bold; font-weight: 700;
+$font-weight-extra-bold: 800;
+
+
 
 // Colors
-$primary: #26A7DE;
-$secondary: #32D172;
-$blue: #3490dc;
+$blue: #26A7DE;
+$green: #43C143;
+$primary: $blue;
+$secondary: $green;
+
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
-$green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
