--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,8 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Lato');
+//@import url('https://fonts.googleapis.com/css?family=Lato');
+// Futura PT font family from Adobe Creative Cloud
+@import url("https://use.typekit.net/mlm6gmo.css");
 
 // Variables
 @import 'variables';
@@ -9,23 +11,84 @@
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
-  background-color: #fff;
+  background-color: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
 .navbar-fsbos {
-    background-color: $secondary;
+    background-color: $blue;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 1);
-  font-weight: 300;
+  color: white;
+  font-weight: $font-weight-light;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
 }
 
 .navbar-brand {
-    font-size: 1.5rem;
+    font-family: futura-pt-condensed, sans-serif;
+    font-weight: $font-weight-medium;
+    font-size: 3rem;
 }
 
 .btn-primary {
-  color: #FFF;
+  color: white;
+}
+
+// Listing Card
+.listing-card {
+
+}
+
+.listing-card .list-group-item {
+    border: none;
+    padding: 0rem 0.625rem;
+}
+
+.listing-card .list-group-item:last-child {
+    margin: 0;
+    padding-bottom: 0.625rem;
+}
+
+.listing-card .detail-list-group {
+    display: flex;
+    flex-direction: row;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.listing-card .detail-list-group .detail-list-group-item {
+    position: relative;
+    display: block;
+}
+
+.listing-card p {
+    margin-bottom: 0.25rem;
+}
+
+.listing-card .price {
+    color: $green;
+    font-size: 1.75rem;
+    font-weight: $font-weight-demi;
+}
+
+.listing-card .location {
+    color: #707070;
+    font-size: 1rem;
+    font-weight: $font-weight-book;
+}
+
+.listing-card .details {
+    color: #707070;
+    font-size: 1.125rem;
+}
+
+.listing-card .btn-details {
+    background: $blue;
+    color: white;
+    font-size: 0.75rem;
+    font-weight: $font-weight-medium;
+    text-transform: uppercase;
+    width: 100%;
 }
