--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -22,6 +22,8 @@ $green: #43C143;
 $primary: $blue;
 $secondary: $green;
 
+$border-color: #888888;
+
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66D9b;
