--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -80,7 +80,8 @@
     font-size: 1.125rem;
 }
 
-.listing-card .btn-details {
+.listing-card .btn-details,
+.listing-summary .btn-details {
     background: $blue;
     color: white;
     font-size: 0.75rem;
@@ -90,9 +91,62 @@
 }
 
 // Listing Show
-.listing .table td,
-.listing .table th {
+.listing-summary .price {
+    border: 1px solid $border-color;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    color:#43C143;
+    font-size: 1.875rem;
+    font-weight: $font-weight-heavy;
+}
+
+.listing-summary .col-6 {
+    line-height: 1.2;
+}
+
+.listing-summary small {
+    color: $border-color;
+    display: block;
+    font-size: 1.1rem;
+}
+
+.listing-summary .beds,
+.listing-summary .baths,
+.listing-summary .sqft,
+.listing-summary .per-sqft {
+    border-left: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    font-size: 1.75rem;
+}
+
+.listing-summary .baths,
+.listing-summary .per-sqft {
+    border-right: 1px solid $border-color;
+}
+
+.listing-summary .location {
+    border-left: 1px solid $border-color;
+    border-right: 1px solid $border-color;
+    padding: 0;
+}
+
+.listing-summary .table {
+    margin-bottom: 0;
+}
+
+.listing-summary .table td,
+.listing-summary .table th {
     padding: .25rem;
     vertical-align: middle;
     border-top: 0;
+}
+
+.listing-summary .table th {
+    font-weight: $font-weight-demi;
+}
+
+.listing-summary .call-to-action {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: 1px solid $border-color;
 }
